change the ux of categories in register page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,3 +24,25 @@ body {
 .max-w-100 {
     max-width: 100%;
 }
+
+.spinner {
+    display: none;
+    margin: 20px auto;
+    width: 50px;
+    height: 50px;
+    border: 3px dashed #080808;
+    border-radius: 50%;
+    animation-name: rotate;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes rotate {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
